# ccsessionctl

./: .gitignore  Cargo.toml  README.md
Memory/: activeContext.md  techEnvironment.md  workflowProtocols.md
Memory/events/: eval_history.jsonl  events.jsonl  patterns.json
src/: main.rs
src/actions/: archive.rs  delete.rs  export.rs  mod.rs
src/session/: mod.rs  parser.rs  scanner.rs  types.rs
src/ui/: app.rs  highlight.rs  mod.rs  state.rs
