[package]
name = "ccsessionctl"
version = "0.1.0"
edition = "2021"
description = "TUI for managing Claude Code CLI sessions"
license = "MIT"
repository = "https://github.com/pknull/ccsessionctl"
keywords = ["claude", "tui", "cli", "session", "management"]
categories = ["command-line-utilities"]
authors = ["pknull"]

[dependencies]
# TUI framework
ratatui = "0.27"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Path expansion
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# Compression for archives
flate2 = "1.0"
tar = "0.4"

# Unicode text width
unicode-width = "0.2"

# Human-readable sizes and times
humansize = "2.1"
chrono-humanize = "0.2"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[profile.release]
opt-level = 3
lto = true
strip = true
